Update and rename percobaanhtml3 to percobaanhtml3.html

--- a/percobaanhtml3.html
+++ b/percobaanhtml3.html
@@ -44,11 +44,9 @@ teknik dan latar belakang seniman serta keunggulan karyanya.</p>
 
 <h2>3 Contoh Koleksi di Galeri Nasional</h2>
 <ul>
-</ul>
-<hr>
     <li>Batu Karang yang Teguh - 1977 Henk Ngantung (1921-1991)</li>
-    </li>Tiga Gadis Minahasa - 1949 Henk Ngantung (1921-1991)</li>
-    </li>Gerhana (Dewa Ratih) - 1965 I Gusti Ketut Kobot</li>
+    <li>Tiga Gadis Minahasa - 1949 Henk Ngantung (1921-1991)</li>
+    <li>Gerhana (Dewa Ratih) - 1965 I Gusti Ketut Kobot</li>
 </ul>
 <hr>
 
