--- a/webstatis-Annisa Putri N/tugas3.html
+++ b/webstatis-Annisa Putri N/tugas3.html
@@ -44,22 +44,21 @@ Dengan luas masing-masing 500m<sup>2</sup> untuk Perpustakaan Umum dan 700m<sup>
 <h2><i>Visi, Misi, Tujuan dan Fungsi Perpustakaan Bank Indonesia</i></h2>
 <dl>
     <dt><b>1. Visi</b> </dt>
-    <dd>Mendukung kebijakan Bank Indonesia yang efektif dan meningkatkan
+    <dd><p align="justify">Mendukung kebijakan Bank Indonesia yang efektif dan meningkatkan
         kualitas sumber daya manusia melalui pengelolaan perpustakaan yang
         professional, kelengkapan koleksi perpustakaan sesuai kebutuhan riset dan
-        pelayanan prima.
-        </dd>
+        pelayanan prima.</dd> </p>
     <dt><b>2. Misi</b> </dt>
-    <dd>Mengelola referensi dan literature untuk kegiatan riset dan penelitian
+    <dd><p align="justify">Mengelola referensi dan literature untuk kegiatan riset dan penelitian
         dalam mendukung pelaksanaan tugas Bank Indonesia di bidang moneter,
         perbankan, dan sistem pembayaran serta bidang lain terkait peningkatan
-        kompetensi sumber daya manusia.</dd>
+        kompetensi sumber daya manusia.</dd></p>
         <dt><b>3. Tujuan dan Fungsi</b> </dt> 
-        <dd>a. Untuk mendukung kelancaran tugas Bank Indonesia sebagai bank
+        <dd><p align="justify">a.Untuk mendukung kelancaran tugas Bank Indonesia sebagai bank
             sentral dengan menyediakan bahan-bahan bacaan dan informasi baik
             berbentuk buku maupun terbitan berkala, yang berkaitan dengan tugas Bank Indonesia, yaitu dibidang moneter, 
-            perbankan dan sistem pembayaran serta sekaligus ikut serta meningkatkan kualitas sumber daya manusia Bank Indonesia.</dd>
-            <dd>b. Sebagai Pembina Perpustakaan Kantor-kantor Bank Indonesia.</dd> </dl>
+            perbankan dan sistem pembayaran serta sekaligus ikut serta meningkatkan kualitas sumber daya manusia Bank Indonesia.</dd></p>
+            <dd><p align="justify">b.Sebagai Pembina Perpustakaan Kantor-kantor Bank Indonesia.</dd></p></dl>
             <hr>
 <h2>Jam Layanan Perpustakaan Bank Indonesia</h2>
 <dl>
