--- a/webstatis-Annisa Putri N/tugas3.html
+++ b/webstatis-Annisa Putri N/tugas3.html
@@ -48,9 +48,9 @@ Dengan luas masing-masing 500m<sup>2</sup> untuk Perpustakaan Umum dan 700m<sup>
         kualitas sumber daya manusia melalui pengelolaan perpustakaan yang professional, kelengkapan koleksi perpustakaan sesuai kebutuhan riset dan
         pelayanan prima.</dd> </p>
     <dt><b>2. Misi</b> </dt>
-    <dd><p align="justify">Mengelola referensi dan literature untuk kegiatan riset dan penelitian
+    <dd><p align="justify">Mengelola referensi dan literatur untuk kegiatan riset dan penelitian
         dalam mendukung pelaksanaan tugas Bank Indonesia di bidang moneter, perbankan, dan sistem pembayaran serta bidang lain terkait peningkatan kompetensi sumber daya manusia.</dd></p>
-        <dt><b>3. Tujuan dan Fungsi</b> </dt> 
+        <dt><b>3. Tujuan dan Fungsi</b></dt> 
         <dd><p align="justify">a. Untuk mendukung kelancaran tugas Bank Indonesia sebagai bank
             sentral dengan menyediakan bahan-bahan bacaan dan informasi baik
             berbentuk buku maupun terbitan berkala, yang berkaitan dengan tugas Bank Indonesia, yaitu dibidang moneter, 
