--- a/webstatis-Annisa Putri N/tugas3.html
+++ b/webstatis-Annisa Putri N/tugas3.html
@@ -44,9 +44,8 @@ Dengan luas masing-masing 500m<sup>2</sup> untuk Perpustakaan Umum dan 700m<sup>
 <h2><i>Visi, Misi, Tujuan dan Fungsi Perpustakaan Bank Indonesia</i></h2>
 <dl>
     <dt><b>1. Visi</b> </dt>
-    <dd><p align="justify">Mendukung kebijakan Bank Indonesia yang efektif dan meningkatkan
-        kualitas sumber daya manusia melalui pengelolaan perpustakaan yang professional, kelengkapan koleksi perpustakaan sesuai kebutuhan riset dan
-        pelayanan prima.</dd> </p>
+    <dd><p align="justify">Mendukung kebijakan Bank Indonesia yang efektif dan meningkatkan kualitas sumber daya manusia melalui 
+        pengelolaan perpustakaan yang professional, kelengkapan koleksi perpustakaan sesuai kebutuhan riset dan pelayanan prima.</dd> </p>
     <dt><b>2. Misi</b> </dt>
     <dd><p align="justify">Mengelola referensi dan literatur untuk kegiatan riset dan penelitian
         dalam mendukung pelaksanaan tugas Bank Indonesia di bidang moneter, perbankan, dan sistem pembayaran serta bidang lain terkait peningkatan kompetensi sumber daya manusia.</dd></p>
