--- a/webstatis-Annisa Putri N/tugas4.html
+++ b/webstatis-Annisa Putri N/tugas4.html
@@ -109,7 +109,7 @@
                             <dt>Uang ORIDA</dt>
                             <img src="IMAGES MUSEUM BI/orida lampung.png" alt="">
                             <dd>Untuk mengatasi kekurangan uang tunai akibat terputusnya komunikasi antara pusat dan daerah setelah Agresi Militer Belanda, pemerintah pusat memberi mandat kepada para pemimpin daerah untuk menerbitkan mata uang lokal, ORI-Daerah, yang berlaku sementara di daerah masing-masing. Sejak 1947, ORI-Daerah atau ORIDA ini terbit antara lain di Provinsi Sumatra, Banten, Tapanuli, dan Banda Aceh.</dd>
-                            <div class="clear"></div>
+                            <div class="clear"></div> </d1>
              <br>
              <br>
              <h2>Kontak Museum Bank Indonesia</h2>
