--- a/webstatis-Annisa Putri N/presentasi_klp3.html
+++ b/webstatis-Annisa Putri N/presentasi_klp3.html
@@ -120,7 +120,7 @@ ul {font-family: "monaco", monospace;
     <br>
     <br>
     <br>
-    <img src="IMAGESMUSEUMBI/gedungANRI.jpeg">
+    <img src="IMAGES MUSEUM BI/gedungANRI.jpeg">
     <br>
     <br>
     <h2> Arsip Nasional Republik Indonesia (ANRI)</h2>
