--- a/webstatis-Annisa Putri N/presentasi_klp3.html
+++ b/webstatis-Annisa Putri N/presentasi_klp3.html
@@ -58,6 +58,8 @@ div {font-family: "monaco", monospace;
 ol {font-family: "monaco", monospace;
     font-size: 18px;
     text-align: justify;
+    width: 900px;
+    margin: auto;
     list-style-type:decimal;}
 
 ul {font-family: "monaco", monospace;
