--- a/webstatis-Annisa Putri N/presentasi_klp3.html
+++ b/webstatis-Annisa Putri N/presentasi_klp3.html
@@ -60,6 +60,7 @@ ol {font-family: "monaco", monospace;
     text-align: justify;
     width: 900px;
     margin: auto;
+    padding: 30px;
     list-style-type:decimal;}
 
 ul {font-family: "monaco", monospace;
@@ -114,7 +115,7 @@ ul {font-family: "monaco", monospace;
         font-size: 20px;
         padding: 10px;
         width: 180px;
-        margin-left: 220px;}
+        margin-left: 200px;}
 </style>
     
 <body>
