--- a/webstatis-Annisa Putri N/presentasi_klp3.html
+++ b/webstatis-Annisa Putri N/presentasi_klp3.html
@@ -148,13 +148,12 @@ ul {font-family: "monaco", monospace;
     <h2>PROFIL ANRI</h2>
     <h3><b>Kedudukan</b></h3>
     <p>Arsip Nasional Republik Indonesia (ANRI) adalah Lembaga Pemerintah Non Kementrian (LPNK) yang 
-        berkedudukan di bawah dan bertanggungjawab kepada Presiden.
-    </p>
-
+        berkedudukan di bawah dan bertanggungjawab kepada Presiden.</p>
+    
     <h3><b>Visi</b></h3>
     <p>Menjadikan Arsip Sebagai Simpul Pemersatu Bangsa Dalam Kerangka Negara Kesatuan Republik 
-        Indonesia Yang akan Dicapai Pada Tahun 2025
-    </p>
+        Indonesia Yang akan Dicapai Pada Tahun 2025 </p>
+    
     <h3><b>Misi</b></h3>
     <ul class="Misi">
         <ol>
@@ -169,7 +168,6 @@ ul {font-family: "monaco", monospace;
             </li>
         </ol>
     </ul>
-
     <h3><b>Tugas</b></h3>
     <p>Melaksanakan tugas pemerintahan di bidang kearsipan sesuai dengan ketentuan peraturan perundang-undangan yang berlaku.</p>
     <h3><b>Fungsi</b></h3>
